--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
 
     <div class="container">
         <h2>about me??</h2>
-        <p><strong>Nama lengkap:</strong> Tsabita Irene Adielia</p>
+        <p><strong>Nama Lengkap:</strong> Tsabita Irene Adielia</p>
         <p><strong>No. Presensi:</strong> 32</p>
         <p><strong>Alamat:</strong> Sendangtirto, Berbah, Sleman</p>
         <p><strong>Kelas:</strong> 12 SIJA B</p>
         <p><strong>Cita-cita:</strong> Menjadi orang yang bermanfaat</p>
+    </div>
+    <div class="container">
+        <p><strong>Nama Lengkap Teman:</strong> Thara Bunga Novriyansyah</p>
+        <a href="https://github.com/tharabnv/belajar_git.git"></a>
     </div>
 
 </body>
