--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
         <p><strong>Alamat:</strong> Sendangtirto, Berbah, Sleman</p>
         <p><strong>Kelas:</strong> 12 SIJA B</p>
         <p><strong>Cita-cita:</strong> Menjadi orang yang bermanfaat</p>
-    </div>
-    <div class="container">
+        <hr>
         <p><strong>Nama Lengkap Teman:</strong> Thara Bunga Novriyansyah</p>
-        <a href="https://github.com/tharabnv/belajar_git.git"></a>
+        <p><a href="https://github.com/tharabnv/belajar_git.git"></a></p>
     </div>
-
 </body>
 </html>
