--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <p><strong>Cita-cita:</strong> Menjadi orang yang bermanfaat</p>
         <hr>
         <p><strong>Nama Lengkap Teman:</strong> Thara Bunga Novriyansyah</p>
-        <p><a href="https://github.com/tharabnv/belajar_git.git"></a></p>
+        <p><strong>Repository GitHub:</strong> 
+            <a href="https://github.com/tharabnv/belajar_git.git" target="_blank">
+                https://github.com/tharabnv/belajar_git.git
+            </a>
+        </p>
+        
     </div>
 </body>
 </html>
