--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <div class="container">
-        <h2>about me??</h2>
+        <h2>about me❓👀</h2>
         <p><strong>Nama Lengkap:</strong> Tsabita Irene Adielia</p>
         <p><strong>No. Presensi:</strong> 32</p>
         <p><strong>Alamat:</strong> Sendangtirto, Berbah, Sleman</p>
